# project/routes/homepage.js
@@ -48,19 +48,17 @@ router.use(async function (req, res, next) {
 
   router.put("/favoritePlayer/:playerId", async (req, res, next) => {
     try {
-      
       const player_id = req.params.playerId;
       if(!isNormalInteger(req.params.playerId)||!await players_utils.getPlayerDetail(player_id)){
-        throw { status: 406, message:"The player does not exists in the system" };
+        throw { status: 400, message:"The player does not exists in the system" };
       }
       const CheckIfExsits=await users_utils.AddingFavoriteChecker(req.session.user_id,"FavoritePlayers","playerID",req.params.playerId)
       
       if(CheckIfExsits){
         throw { status: 406, message:"The player is  already in your favorites" };
       }
-     
       await users_utils.markPlayerAsFavorite(req.session.user_id, player_id);
-      res.status(201).send("The player was successfully added to favorites");
+      res.status(200).send("The player was successfully added to favorites");
     } catch (error) {
       next(error);
     }
@@ -69,18 +67,16 @@ router.use(async function (req, res, next) {
   router.delete("/favoritePlayer/:playerId", async (req, res, next) => {
     try {
       if (!isNormalInteger(req.params.playerId)){
-        throw { status: 406, message:"invalid player id" };
+        throw { status: 400, message:"invalid player id" };
       }
-
       const player_id = parseInt(req.params.playerId);
       const cookie= parseInt(req.session.user_id);
       const CheckIfExsits=await users_utils.AddingFavoriteChecker(req.session.user_id,"FavoritePlayers","playerID",req.params.playerId)
-      
       if(player_id==="{playerId}"||!CheckIfExsits){
-        throw { status: 406, message:"The player is  not   in your favorites" };
+        throw { status: 406, message:"The player is not in your favorites" };
       }
       await users_utils.removePlayerFromFavorites(cookie, player_id);
-      res.status(201).send("The player was  successfully removed from  favorites");
+      res.status(200).send("The player was  successfully removed from  favorites");
     } catch (error) {
       next(error);
     }
@@ -103,20 +99,18 @@ router.use(async function (req, res, next) {
   router.put("/favoriteteam/:teamId", async (req, res, next) => {
     try {
       if (!isNormalInteger(req.params.teamId)){
-        throw { status: 406, message:"invalid team id" };
+        throw { status: 400, message:"invalid team id" };
       }
       const team_id = req.params.teamId;
       if(!await teams_utils.getTeamDetailsbyID(team_id)){
-        throw { status: 406, message:"The team does not exists in the system" };
+        throw { status: 400, message:"The team does not exists in the system" };
       }
       const CheckIfExsits=await users_utils.AddingFavoriteChecker(req.session.user_id,"FavoriteTeam","teamID",req.params.teamId)
       if(CheckIfExsits){
         throw { status: 406, message:"The team is  already in your favorites" };
       }
-     
-
       await users_utils.markTeamAsFavorite(req.session.user_id, team_id);
-      res.status(201).send("The team was successfully saved in favorite");
+      res.status(200).send("The team was successfully added to your favorite");
     } catch (error) {
       next(error);
     }
@@ -125,7 +119,7 @@ router.use(async function (req, res, next) {
   router.delete("/favoriteteam/:teamId", async (req, res, next) => {
     try {
       if (!isNormalInteger(req.params.teamId)){
-        throw { status: 406, message:"invalid team id" };
+        throw { status: 400, message:"invalid team id" };
       }
       const team_id = parseInt(req.params.teamId);
       const cookie= parseInt(req.session.user_id);
@@ -134,7 +128,7 @@ router.use(async function (req, res, next) {
         throw { status: 406, message:"The team is  not in your favorites" };
       }
       await users_utils.removeTeamFromFavorites(cookie, team_id);
-      res.status(201).send("The team was  successfully removed from  favorites");
+      res.status(200).send("The team was  successfully removed from  favorites");
     } catch (error) {
       next(error);
     }
@@ -159,14 +153,14 @@ router.use(async function (req, res, next) {
       const game = req.params.gameId;
       
       if(!isNormalInteger(req.params.gameId)||!await games_utils.getGameDetial(game)){
-        throw { status: 406, message:"The game does not exists in the system" };
+        throw { status: 400, message:"The game does not exists in the system" };
       }
       const CheckIfExsits=await users_utils.AddingFavoriteChecker(req.session.user_id,"FavoriteGames","gameID",req.params.gameId)
       if(CheckIfExsits){
         throw { status: 406, message:"The team is  already in your favorites" };
       }
       await users_utils.markGameAsFavorite(req.session.user_id, game);
-      res.status(201).send("The game was successfully saved in favorite");
+      res.status(200).send("The game was successfully saved in favorite");
     } catch (error) {
       next(error);
     }
@@ -176,7 +170,7 @@ router.use(async function (req, res, next) {
   router.delete("/favoritematches/:gameId", async (req, res, next) => {
     try {
       if (!isNormalInteger(req.params.gameId)){
-        throw { status: 406, message:"invalid game id" };
+        throw { status: 400, message:"invalid game id" };
       }
       const game = req.params.gameId;
       const CheckIfExsits=await users_utils.AddingFavoriteChecker(req.session.user_id,"FavoriteGames","gameID",req.params.gameId)
@@ -184,7 +178,7 @@ router.use(async function (req, res, next) {
         throw { status: 406, message:"The game  is  not  in your favorites" };
       }
       await users_utils.removeGameFromFavorites(req.session.user_id, game);
-      res.status(201).send("The game was successfully removed from favorites");
+      res.status(200).send("The game was successfully removed from favorites");
     } catch (error) {
       next(error);
     }
